force-app/main/default/objects/AmadeusTranslate__c/AmadeusTranslate__c.object-meta.xml
<CustomObject>
    <description>Amadeus語系表翻譯內容</description>
    <label>Amadeus語系表</label>
    <nameField>
        <displayFormat>A-{000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Amadeus語系表</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>