force-app/main/default/objects/AmadeusTranslate__c/fields/CH__c.field-meta.xml
<CustomField>
    <fullName>CH__c</fullName>
    <label>CH</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>