force-app/main/default/objects/AmadeusTranslate__c/fields/EN__c.field-meta.xml
<CustomField>
    <fullName>EN__c</fullName>
    <label>EN</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>