force-app/main/default/objects/AmadeusTranslate__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Code__c</columns>
    <columns>CH__c</columns>
    <columns>EN__c</columns>
    <columns>Menu__c</columns>
    <columns>Memo__c</columns>
    <filterScope>Everything</filterScope>
    <label>全部</label>
</ListView>